--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tap test.js"
   },
   "bin": {
-    "sellout": "index.js"
+    "sellout": "sellout"
   },
   "repository": {
     "type": "git",
